[gd_scene load_steps=2 format=3 uid="uid://hud123"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="ComboLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 55.0
offset_right = 200.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
text = "Combo: 0"

[node name="LivesLabel" type="Label" parent="."]
offset_left = 1080.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "Lives: ♥♥♥"
horizontal_alignment = 2

[node name="TimerLabel" type="Label" parent="."]
offset_left = 1080.0
offset_top = 55.0
offset_right = 1260.0
offset_bottom = 85.0
theme_override_font_sizes/font_size = 24
text = "Time: 60.0"
horizontal_alignment = 2

[node name="FloorLabel" type="Label" parent="."]
offset_left = 580.0
offset_top = 20.0
offset_right = 700.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Floor: 1"
horizontal_alignment = 1

[node name="PauseButton" type="Button" parent="."]
offset_left = 1210.0
offset_top = 90.0
offset_right = 1260.0
offset_bottom = 120.0
text = "||"
flat = true

[node name="WordContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="WordContainer"]
layout_mode = 2

[node name="WordDisplay" type="Label" parent="WordContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = ""
horizontal_alignment = 1

[node name="TypedDisplay" type="Label" parent="WordContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
text = ""
horizontal_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Final Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="DangerZone" type="ColorRect" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
color = Color(1, 0, 0, 0.2)
